@@ -3,11 +3,11 @@ package jadx.core.deobf;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.NavigableSet;
 import java.util.Set;
@@ -155,7 +155,7 @@ public class Deobfuscator {
 			path.toFile().createNewFile();
 
 			mappingTree.visitHeader();
-			mappingTree.visitNamespaces("official", List.of("named"));
+			mappingTree.visitNamespaces("official", Arrays.asList("named"));
 			mappingTree.visitContent();
 
 			for (ClassNode cls : root.getClasses()) {
